# Production-AI-SDD-Skill-Pack

./: .gitignore  AGENTS.md  AI 系統與自動化專案開發 SOP.docx  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  Production_AI_SDD_Skill_Pack_Change_Report_zh-TW.md  Production_AI_SDD_Skill_Pack_Master_Spec_zh-TW.md  Production_AI_SDD_Skill_Pack_Review_Report_zh-TW.md  Production_AI_SDD_Skill_Pack_Status_Summary_zh-TW.md  Production_AI_SDD_Skill_Pack_v1.0_Completion_Report_zh-TW.md  README.md  README.zh-TW.md  SECURITY.md  pack.yaml  pyproject.toml
.claude/: settings.example.json
.codex/: config.example.toml
docs/: README.md  architecture.md  claude-code-installation.md  codex-installation.md  eval-guide.md  hook-guide.md  knowledge-extraction.md  migration-guide.md  risk-classification.md  sdd-workflow.md  skill-authoring-guide.md  troubleshooting.md  windows-wsl2.md
examples/: README.md
hooks/: README.md
profiles/: README.md  agent-tool-use.md  conversational-ai.md  document-intelligence.md  generative-content.md  ml-inference-service.md  multi-tenant-ai-saas.md  rag-knowledge-system.md  realtime-voice.md  workflow-automation.md
schemas/: change.schema.json  eval-case.schema.json  skill-manifest.schema.json  spec.schema.json  task.schema.json  verification.schema.json
scripts/: _minijsonschema.py  build_distribution.py  check_spec_drift.py  generate_traceability.py  install.py  install_hooks.py  run_output_evals.py  run_quality_gate.py  run_safety_evals.py  run_trigger_evals.py  run_workflow_evals.py  scan_secrets.py  sync_skills.py  test_hooks.py  (+4 more)
(+86 files in other folders)
